--- a/static/scss/elements/_elements.scss
+++ b/static/scss/elements/_elements.scss
@@ -25,7 +25,7 @@ h5 {
 }
 
 hr {
-  border-color:$base-border-color;
+  border-color:$base-accent-color;
 }
 
 strong, b {
